Added in lots of rules

--- a/MUNApp/MainPage.xaml
+++ b/MUNApp/MainPage.xaml
@@ -8,9 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="beginBtn" Content="Begin New Committee" HorizontalAlignment="Left" Margin="652,266,0,0" VerticalAlignment="Top"/>
-        <Button Content="Resume Existing Committee" HorizontalAlignment="Left" Margin="647,382,0,0" VerticalAlignment="Top"/>
-        <Button Content="Edit Committee List" HorizontalAlignment="Left" Margin="656,496,0,0" VerticalAlignment="Top" />
+        <Button x:Name="beginBtn" Content="Begin New Committee" HorizontalAlignment="Left" Margin="652,266,0,0" VerticalAlignment="Top" Click="beginBtn_Click"/>
+        <Button x:Name="resumeBtn" Content="Resume Existing Committee" HorizontalAlignment="Left" Margin="647,382,0,0" VerticalAlignment="Top" Click="resumeBtn_Click"/>
+        <Button x:Name="editBtn" Content="Edit Committee List" HorizontalAlignment="Left" Margin="656,496,0,0" VerticalAlignment="Top" Click="editBtn_Click" />
 
     </Grid>
 </Page>
