--- a/MUNApp/CommitteePage.xaml
+++ b/MUNApp/CommitteePage.xaml
@@ -10,7 +10,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="20*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -26,6 +26,8 @@
         </Grid>
         <Grid Grid.Column="1" Grid.Row="3">
             <Grid.RowDefinitions>
+                <RowDefinition Height="5*"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="5*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="5*"/>
@@ -59,6 +61,10 @@
             <Button x:Name="button13"  Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button13_Click"  />
             <Button x:Name="button14"  Grid.Column="4" Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button14_Click"  />
             <Button x:Name="button15"  Grid.Column="6" Grid.Row="6" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button15_Click"  />
+            <Button x:Name="button16"  Grid.Column="0" Grid.Row="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button16_Click" />
+            <Button x:Name="button17"  Grid.Column="2" Grid.Row="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button17_Click"   />
+            <Button x:Name="button18"  Grid.Column="4" Grid.Row="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button18_Click"   />
+            <Button x:Name="button19"  Grid.Column="6" Grid.Row="8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="button19_Click"  />
 
         </Grid>        
 
